fix url view on dark mode

--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -4,7 +4,6 @@ html {
 body {
   overflow-x: hidden;
   font-family: "Philosopher";
-  color: #333;
 }
 
 body,
@@ -31,7 +30,7 @@ body > .container {
 a,
 a:hover,
 a:active {
-  color: black;
+  color: rgb(59, 176, 180);
   text-decoration: none;
 }
 .navbar {
