--- a/src/components/special/_win95.less
+++ b/src/components/special/_win95.less
@@ -3,7 +3,7 @@
 .win95-btn {
   font-family: "VT323", monospace;
   font-size: inherit;
-  color: black;
+  color: rgb(59, 176, 180);
   background-color: #d4d4d4;
   padding: 0.3rem 3.4rem;
   border-bottom: 3px solid black;
@@ -19,12 +19,12 @@
   }
 
   &:hover {
-    box-shadow: 0.2rem 0.2rem 0 black;
+    box-shadow: 0.2rem 0.2rem 0 rgb(59, 176, 180);
     transform: translate(-0.2rem, -0.2rem);
   }
 
   &:active {
-    box-shadow: 0 0 0 black;
+    box-shadow: 0 0 0 rgb(59, 176, 180);
     transform: translate(0, 0);
   }
 }
